# claude-code-config

./: .claudeignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  GHL_WORKFLOW_NOTES.md  MASTER_SOP.md  SESSION_HANDOFF.md  bootstrap.sh
social-suite/: .env.example  .gitignore  ARCHITECTURE.md  BULK_PIPELINE_PLAN.md  CLAUDE.md  Dockerfile  IG_AUTOPOST_SETUP.md  META_SETUP.md  MULTI_BRAND.md  PLATFORM_SETUP.md  PORTAL_ARCHITECTURE.md  QUICKSTART.md  README.md  RESEARCH.md  RESTORE_CAPTION_TEMPLATES.md  RESTORE_CONTENT_CALENDAR.md  RESTORE_HOOK_LIBRARY.md  RESTORE_SETUP.md  RESTORE_STYLE_PROFILE.md  RESTORE_VIDEO_TEMPLATES.md  RESUME_TOMORROW.md  REVIEW_SUBMISSIONS.md  SESSION_STATUS.md  STYLE_PROFILE.md  SUPOCLIP_HANDOFF.md  SUPOCLIP_OWNERSHIP.md  TIKTOK_BROWSER_AUTOPOST.md  TIKTOK_SETUP.md  TIKTOK_SETUP_PROGRESS.md  docker-compose.yml  pyproject.toml
social-suite/automation/: build_queue.py  fb_autopost.py  ig_autopost.py  ig_autopost_cloud.py  make_cards.py  post_all.py  schedule_queue.py  tiktok_browser_post.py  trophy_fb_autopost.py  video_pipeline.py
social-suite/content/: README.md  brands.example.json  fb_posted.json  hp-content.json  processed.json  queue.example.json  queue.json  restore-content.json  tiktok_songs_hp.txt  trophy_fb_posted.json
social-suite/deploy/: .env.example  Caddyfile  README.md  docker-compose.full.yml
social-suite/legal/: PRIVACY_POLICY.md  TERMS.md
social-suite/portal/: README.md  __init__.py  app.py  crypto.py  db.py  migrate_queue.py  models.py  seed.py
social-suite/services/: __init__.py
social-suite/tests/: test_ass_builder.py  test_auto_clips.py  test_brands.py  test_build_queue.py  test_card.py  test_check_token.py  test_clipper.py  test_copywriter.py  test_dropbox_client.py  test_fb_autopost.py  test_free_writer.py  test_gbp.py  test_ig_autopost_cloud.py  test_local_folder.py  test_make_cards.py  test_meta.py  test_music_rotation.py  test_pipeline.py  test_portal_app.py  test_portal_calendar.py  test_portal_crypto.py  test_portal_migrate.py  test_portal_models.py  test_poster.py  test_queue.py  test_review_feed.py  test_routing.py  test_run_due.py  test_schedule_queue.py  test_shots.py  test_style.py  test_tiktok.py  test_tiktok_browser_post.py  test_tiktok_oauth.py  test_transcribe.py  test_trophy_fb_autopost.py  test_video_pipeline.py  test_visual.py  (+2 more)
(+296 files in other folders)
